sumo/tests/traci/VariableRetrieval/Simulation/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xab 0xff dummy
simstep 6 1
